fix fact card styling on mobile

--- a/app/assets/stylesheets/components/fact-card.scss
+++ b/app/assets/stylesheets/components/fact-card.scss
@@ -199,3 +199,9 @@
 		}
 	}
 }
+
+@include respond(phone) {
+	.fact-card {
+		margin: 15px auto;
+	}
+}
